--- a/PuroFusionUnitTester/PuroFusionUnitTester.csproj
+++ b/PuroFusionUnitTester/PuroFusionUnitTester.csproj
@@ -65,6 +65,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PuroFusionLib\PuroFusionLib.csproj">
+      <Project>{0bd3312d-87eb-4667-8505-4c59fd68b154}</Project>
+      <Name>PuroFusionLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
