--- a/PuroFusionTestGui/PuroFusionTestGui.csproj
+++ b/PuroFusionTestGui/PuroFusionTestGui.csproj
@@ -94,6 +94,7 @@
     <Reference Include="Telerik.Windows.Data">
       <HintPath>..\..\Telerik\Telerik.Windows.Data.dll</HintPath>
     </Reference>
+    <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -166,6 +167,10 @@
     <ProjectReference Include="..\PuroFusionLib\PuroFusionLib.csproj">
       <Project>{0bd3312d-87eb-4667-8505-4c59fd68b154}</Project>
       <Name>PuroFusionLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PuroFusionUnitTester\PuroFusionUnitTester.csproj">
+      <Project>{ea2d3073-5923-41e2-b681-c326fe640b8d}</Project>
+      <Name>PuroFusionUnitTester</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
