Added PuroFusionTestGui a listbox to show threaded actions.

--- a/PuroFusionUnitTesterGui/PuroFusionUnitTesterGui.csproj
+++ b/PuroFusionUnitTesterGui/PuroFusionUnitTesterGui.csproj
@@ -115,6 +115,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PuroFusUnitTestMainScripts.cs" />
     <Page Include="MainDict.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
