--- a/PuroFusionUnitTesterGui/PuroFusionUnitTesterGui.csproj
+++ b/PuroFusionUnitTesterGui/PuroFusionUnitTesterGui.csproj
@@ -53,7 +53,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Purolator-Icon-5.ico</ApplicationIcon>
+    <ApplicationIcon>OK.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -151,6 +151,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="testscript.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -166,6 +169,9 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="TestScriptsV1.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Resource Include="purofusion.ico" />
     <Resource Include="divider2.ico" />
     <Resource Include="Purolator-Icon-5.ico" />
