Wrting the automated tests to the db.

--- a/PuroTouchEntities/PuroTouchEntities.csproj
+++ b/PuroTouchEntities/PuroTouchEntities.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutomatedTesting.cs">
+      <DependentUpon>PuroTouchModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PuroTouchDBEntities.cs" />
     <Compile Include="PuroTouchModel.Context.cs">
