--- a/PuroTouchEntities/App.Config
+++ b/PuroTouchEntities/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="PuroTouchDBEntities" connectionString="metadata=res://*/PuroTouchModel.csdl|res://*/PuroTouchModel.ssdl|res://*/PuroTouchModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VIRTUALONE\WIN10DEV2019;initial catalog=PuroTouchDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PuroTouchDBEntities" connectionString="metadata=res://*/PuroTouchModel.csdl|res://*/PuroTouchModel.ssdl|res://*/PuroTouchModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pi-dev-sql;initial catalog=PuroTouchDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
